compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_type_alias_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: type Fancy_Bool = Bool
---
error: Invalid upname
  ┌─ /src/one/two.gleam:1:6
  │
1 │ type Fancy_Bool = Bool
  │      ^^^^^^^^^^ This is not a valid upname

Hint: Upnames start with an uppercase letter and contain only lowercase
letters, numbers, and uppercase letters.
Try: FancyBool
